# dlsub

./: README.md  hash_file.py  main.py  open_subtitles.py
vlc_plugin/: CMakeLists.txt  FindLIBVLC.cmake  Makefile
vlc_plugin/src/: foo.c
